# PersonalFinance

./: .gitignore  GPT_labeling.ipynb  README.md  analysis.md  analysis.py  analysis_2025-10-01_2025-10-30.md  category.txt  clean.py  deepseek_categorizer.py  label.py  main.py  pyproject.toml  update.py
